# KCC2026

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
batch_errors/: batch_69e7368f62488190a46c3c1cc9e0abcb.jsonl  batch_69e739d837c08190a2e51e832a7bc9b1.jsonl  batch_69e73a0d2eb8819080cba14d4f2d78b6.jsonl
batch_requests/: auxiliary_samples_calibration.jsonl  auxiliary_samples_full.jsonl  pair_predictions_pairwise_judge_gpt5mini_batch.index.json  probe_exact_spec.jsonl  probe_no_temp_keep_top_p.jsonl  probe_responses_low_4096.jsonl  probe_responses_path.jsonl
configs/: eval_prompt100_qwen_rrd_gpt5mini.yaml  main.yaml  qwen_small_tp4_rrd.yaml  rrd_sample_prompt100_gemma_e4b.yaml  rrd_sample_prompt100_small.yaml
scripts/: finalize_remaining_after_gemma.sh  run_gemma_large_rrd_remaining_vllm.sh  run_gpt_oss_full_self_eval.sh  run_gpt_oss_tp4_pairwise_judge_only.sh  run_gpt_oss_tp4_self_prompt100_eval.sh  run_main_experiment.sh  run_qwen_large_tp4_then_eval.sh  run_qwen_small_tp4_rrd.sh  run_rrd_remaining_qwen_gemma_and_merge.sh  run_rrd_sample_prompt100_gemma_e4b_vllm.sh  run_rrd_sample_prompt100_small_vllm.sh  run_rubrics_vllm_then_eval.sh  run_self_full_large_vllm.sh  run_self_prompt100_large_vllm.sh  show_rubric_progress.sh  watch_rubrics_then_vllm_pairwise_eval.sh
src/: __init__.py  build_preference_exemplar_bank.py  evaluate_pairs.py  evaluate_pairwise_judges_gpt5mini_batch.py  evaluate_pairwise_judges_only.py  export_run_manifest.py  generate_auxiliary_samples.py  generate_rubrics.py  load_existing_human_eval.py  rrd_weighting.py  schemas.py  utils.py  (+4 more)
(+165 files in other folders)
